syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "auto.proto";
import "kunde.proto";

option csharp_namespace = "AutoReservation.Service.Grpc";

package AutoReservation;

service ReservationService {
	rpc GetAllReservations(google.protobuf.Empty) returns (GetAllReservationsResponse);
	rpc GetReservation(GetReservationRequest) returns (ReservationDto);
	rpc InsertReservation(ReservationDto) returns (ReservationDto);
	rpc UpdateReservation(ReservationDto) returns (google.protobuf.Empty);
	rpc DeleteReservation(ReservationDto) returns (google.protobuf.Empty);
	//rpc AvailabilityCheck(ReservationDto) returns (CheckResponse);
	//rpc DateRangeCheck(ReservationDto) returns (CheckResponse);
}

message GetAllReservationsResponse{
	repeated ReservationDto data=1;
}

message GetReservationRequest {
	int32 id_filter = 1;
}
/*message CheckResponse {
	bool is_valid = 1;
}*/
message ReservationDto {
	//PrimaryKey
    int32 reservation_nr = 1;
    google.protobuf.Timestamp from = 2;
    google.protobuf.Timestamp to = 3;
    bytes row_version = 4;
    CarDto car = 5;
    CustomerDto customer = 6;
}
